docs/v2.7.0/rtd/_sources/pages/examples.rst.txt
========
Examples
========

The following examples can give you an impression of what the package can do:

- `Census Income <https://pandas-profiling.ydata.ai/examples/census/census_report.html>`_ (US Adult Census data relating income)
- `NASA Meteorites <https://pandas-profiling.ydata.ai/examples/meteorites/meteorites_report.html>`_ (comprehensive set of meteorite landings) |nasa_binder| |nasa_colab|

- `Titanic <https://pandas-profiling.ydata.ai/examples/titanic/titanic_report.html>`_ (the "Wonderwall" of datasets) |titanic_binder| |titanic_colab|

- `NZA <https://pandas-profiling.ydata.ai/examples/nza/nza_report.html>`_ (open data from the Dutch Healthcare Authority)

- `Stata Auto <https://pandas-profiling.ydata.ai/examples/stata_auto/stata_auto_report.html>`_ (1978 Automobile data, Stata format)

- `Vektis <https://pandas-profiling.ydata.ai/examples/vektis/vektis_report.html>`_ (Vektis Dutch Healthcare data)

- `Website Inaccessibility <https://pandas-profiling.ydata.ai/examples/website_inaccessibility/website_inaccessibility_report.html>`_ (demonstrates the URL type)

- `Colors <https://pandas-profiling.ydata.ai/examples/colors/colors_report.html>`_ (a simple colors dataset)

- `Russian Vocabulary <https://pandas-profiling.ydata.ai/examples/russian_vocabulary/russian_vocabulary.html>`_ (demonstrates text analysis)

- `Orange prices <https://pandas-profiling.ydata.ai/examples/themes/united_report.html>`_ and `Coal prices <https://pandas-profiling.ydata.ai/examples/themes/flatly_report.html>`_ (showcase report themes)

- `Tutorial: report structure using Kaggle data (advanced) <https://pandas-profiling.ydata.ai/examples/kaggle/modify_report_structure.ipynb>`_ (modify the report's structure) |kaggle_binder| |kaggle_colab|




.. |nasa_binder| image:: https://mybinder.org/badge_logo.svg
 :alt: Open in Binder
 :target: https://mybinder.org/v2/gh/pandas-profiling/pandas-profiling/master?filepath=examples%2Fmeteorites%2Fmeteorites.ipynb
.. |nasa_colab| image:: https://colab.research.google.com/assets/colab-badge.svg
 :alt: Open in Colab
 :target: https://colab.research.google.com/github/pandas-profiling/pandas-profiling/blob/master/examples/meteorites/meteorites.ipynb

.. |titanic_binder| image:: https://mybinder.org/badge_logo.svg
 :alt: Open in Binder
 :target: https://mybinder.org/v2/gh/pandas-profiling/pandas-profiling/master?filepath=examples%2Ftitanic%2Ftitanic.ipynb

.. |titanic_colab| image:: https://colab.research.google.com/assets/colab-badge.svg
 :alt: Open in Colab
 :target: https://colab.research.google.com/github/pandas-profiling/pandas-profiling/blob/master/examples/titanic/titanic.ipynb

.. |kaggle_binder| image:: https://mybinder.org/badge_logo.svg
 :alt: Open in Binder
 :target: https://mybinder.org/v2/gh/pandas-profiling/pandas-profiling/master?filepath=examples%2Fkaggle%2Fmodify_report_structure.ipynb

.. |kaggle_colab| image:: https://colab.research.google.com/assets/colab-badge.svg
 :alt: Open in Colab
 :target: https://colab.research.google.com/github/pandas-profiling/pandas-profiling/blob/master/examples/kaggle/modify_report_structure.ipynb)