docs/v2.9.0rc1/rtd/_sources/pages/examples.rst.txt
========
Examples
========

The following examples can give you an impression of what the package can do:

- `Census Income <https://pandas-profiling.ydata.ai/examples/master/census/census_report.html>`_ (US Adult Census data relating income)

- `NASA Meteorites <https://pandas-profiling.ydata.ai/examples/master/meteorites/meteorites_report.html>`_ (comprehensive set of meteorite landings) |nasa_binder| |nasa_colab|

- `Titanic <https://pandas-profiling.ydata.ai/examples/master/titanic/titanic_report.html>`_ (the "Wonderwall" of datasets) |titanic_binder| |titanic_colab|

- `NZA <https://pandas-profiling.ydata.ai/examples/master/nza/nza_report.html>`_ (open data from the Dutch Healthcare Authority)

- `Stata Auto <https://pandas-profiling.ydata.ai/examples/master/stata_auto/stata_auto_report.html>`_ (1978 Automobile data, Stata format)

- `Colors <https://pandas-profiling.ydata.ai/examples/master/colors/colors_report.html>`_ (a simple colors dataset)

- `Vektis <https://pandas-profiling.ydata.ai/examples/master/vektis/vektis_report.html>`_ (Vektis Dutch Healthcare data)

Showcasing specific features
----------------------------

- `Russian Vocabulary <https://pandas-profiling.ydata.ai/examples/master/features/russian_vocabulary.html>`_ (demonstrates unicode text analysis)

- `Cats and Dogs <https://pandas-profiling.ydata.ai/examples/master/features/cats-and-dogs.html>`_ (demonstrates image analysis from the file system, `source <https://pandas-profiling.ydata.ai/examples/master/features/images_cats_and_dogs.py>`__)

- `Celebrity Faces <https://pandas-profiling.ydata.ai/examples/master/features/celebrity-faces.html>`_ (demonstrates image analysis with EXIF information, `source <https://pandas-profiling.ydata.ai/examples/master/features/images_exif.py>`_)

- `Website Inaccessibility <https://pandas-profiling.ydata.ai/examples/master/features/website_inaccessibility_report.html>`_ (demonstrates URL analysis)

- `Orange prices <https://pandas-profiling.ydata.ai/examples/master/features/united_report.html>`_ and `Coal prices <https://pandas-profiling.ydata.ai/examples/master/features/flatly_report.html>`_ (showcase report themes)

Tutorials
---------

- `Tutorial: report structure using Kaggle data (advanced) <https://pandas-profiling.ydata.ai/examples/master/tutorials/modify_report_structure.ipynb>`_ (modify the report's structure) |kaggle_binder| |kaggle_colab|




.. |nasa_binder| image:: https://mybinder.org/badge_logo.svg
 :alt: Open in Binder
 :target: https://mybinder.org/v2/gh/pandas-profiling/pandas-profiling/master?filepath=examples%2Fmeteorites%2Fmeteorites.ipynb
.. |nasa_colab| image:: https://colab.research.google.com/assets/colab-badge.svg
 :alt: Open in Colab
 :target: https://colab.research.google.com/github/pandas-profiling/pandas-profiling/blob/master/examples/meteorites/meteorites.ipynb

.. |titanic_binder| image:: https://mybinder.org/badge_logo.svg
 :alt: Open in Binder
 :target: https://mybinder.org/v2/gh/pandas-profiling/pandas-profiling/master?filepath=examples%2Ftitanic%2Ftitanic.ipynb

.. |titanic_colab| image:: https://colab.research.google.com/assets/colab-badge.svg
 :alt: Open in Colab
 :target: https://colab.research.google.com/github/pandas-profiling/pandas-profiling/blob/master/examples/titanic/titanic.ipynb

.. |kaggle_binder| image:: https://mybinder.org/badge_logo.svg
 :alt: Open in Binder
 :target: https://mybinder.org/v2/gh/pandas-profiling/pandas-profiling/master?filepath=examples%2Fkaggle%2Fmodify_report_structure.ipynb

.. |kaggle_colab| image:: https://colab.research.google.com/assets/colab-badge.svg
 :alt: Open in Colab
 :target: https://colab.research.google.com/github/pandas-profiling/pandas-profiling/blob/master/examples/kaggle/modify_report_structure.ipynb)